@@ -1,3 +1,4 @@
+- Client: accessor to communicator object
 - Token authentication: support for token renewal and revoking
 - Compatibility with Elixir server API
 - Relax dependency version requirements
